--- a/ansible/playbook/roles/docker/tasks/main.yml
+++ b/ansible/playbook/roles/docker/tasks/main.yml
@@ -4,18 +4,19 @@
     src=etc/apt/sources.list.d/docker.list
     dest=/etc/apt/sources.list.d/docker.list
 - name: apt key for docker
-  apt_key: keyserver=p80.pool.sks-keyservers.net id=58118E89F3A912897C070ADBF76221572C52609D
+  apt_key:
+    url: https://download.docker.com/linux/debian/gpg
 - name: apt-get update again
   apt: update_cache=yes
 - name: install docker
   apt: name={{ item }}
   with_items:
-    - docker-engine
+    - docker-ce
 - name: docker service enabled
   service: name=docker state=started enabled=yes
 - name: download docker-compose
   get_url:
-    url=https://github.com/docker/compose/releases/download/1.8.0/docker-compose-Linux-x86_64
+    url=https://github.com/docker/compose/releases/download/1.11.2/docker-compose-Linux-x86_64
     dest=/usr/local/bin/docker-compose
     owner=root
     group=root
